Updated placeholder text from hobby input field

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
               <label for="hobby">Hobbies: </label>
 
-              <input type="text" id="hobby" placeholder="ex. web design, artes marciais, programação"/>
+              <input type="text" id="hobby" placeholder="e.g. reading, pets, music"/>
             </div>
 
           <div class="row">
